Primeira chamada Rest da camanda de serviços

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 spring.profiles.active=test
 
 spring.jpa.open-in-view=true
+
+#porta utilizada para chamada na url da app
+server.port=${port:8085}
+
